add test-cases Create, read, update policy

--- a/src/test/java/org/lanit/resources/globalData.properties
+++ b/src/test/java/org/lanit/resources/globalData.properties
@@ -1,2 +1,4 @@
 browser=chrome
 mongo=mongodb://172.19.90.205:27017/test-storage
+audit=http://docshouse-test.k8s.lan.lanit.ru/dh-audit-service/audit
+authPage=https://docshouse-test.k8s.lan.lanit.ru/auth
