--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,14 @@
       <version>5.3.0</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.5.13</version>
+    </dependency>
+
+
 
   </dependencies>
 </project>
